kubernetes/apps/storage/longhorn/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
spec:
  hostnames: ["longhorn.ironstone.casa"]
  parentRefs:
    - name: traefik-internal
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - name: longhorn-frontend
          namespace: storage
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
